# whisper-client

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh
docs/: README.md  sequence_diagram.md  state_diagram.md  usage.md
src/: client.rs  config.rs  lib.rs  main.rs  models.rs  utils.rs  youtube.rs
tests/: audio_format_test.rs  collect_files_test.rs  integration_test.rs  mime_test.rs
tests/fixtures/: test.json
