[package]
name = "whisper-client"
version = "0.1.0"
edition = "2021"
description = "A Rust client for the Whisper transcription service"

[dependencies]
reqwest = { version = "0.11", features = ["multipart", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
mime_guess = "2.0"
colored = "2.0"
chrono = "0.4"
dirs = "5.0"
lazy_static = "1.4"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.8"
